versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Summands.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalSummands
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function SummandsDefaultConst() &
      bind(C, name='SummandsDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function SummandsDefaultConst

!! Create, default
function SummandsDefault() &
      bind(C, name='SummandsDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function SummandsDefault

!! Create, general, const
function SummandsCreateConst( &
   add, addSize &
) &
      bind(C, name='SummandsCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: addSize
   type(c_ptr) :: add(addSize)
   type(c_ptr) :: handle
end function SummandsCreateConst

!! Create, general
function SummandsCreate( &
   add, addSize &
) &
      bind(C, name='SummandsCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: addSize
   type(c_ptr) :: add(addSize)
   type(c_ptr) :: handle
end function SummandsCreate

!! Assign
subroutine SummandsAssign(handleLHS, handleRHS) &
      bind(C, name='SummandsAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine SummandsAssign

!! Delete
subroutine SummandsDelete(handle) &
      bind(C, name='SummandsDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine SummandsDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function SummandsRead(handle, filename, filenameSize) &
      bind(C, name='SummandsRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function SummandsRead

!! Write to file
function SummandsWrite(handle, filename, filenameSize) &
      bind(C, name='SummandsWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function SummandsWrite

!! Print to standard output, in our prettyprinting format
function SummandsPrint(handle) &
      bind(C, name='SummandsPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function SummandsPrint

!! Print to standard output, as XML
function SummandsPrintXML(handle) &
      bind(C, name='SummandsPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function SummandsPrintXML

!! Print to standard output, as JSON
function SummandsPrintJSON(handle) &
      bind(C, name='SummandsPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function SummandsPrintJSON


!! -----------------------------------------------------------------------------
!! Child: add
!! -----------------------------------------------------------------------------

!! Has
function SummandsAddHas(handle) &
      bind(C, name='SummandsAddHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function SummandsAddHas

!! Clear
subroutine SummandsAddClear(handle) &
      bind(C, name='SummandsAddClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine SummandsAddClear

!! Size
function SummandsAddSize(handle) &
      bind(C, name='SummandsAddSize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function SummandsAddSize

!! Add
subroutine SummandsAddAdd(handle, fieldHandle) &
      bind(C, name='SummandsAddAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SummandsAddAdd

!! Get, by index \in [0,size), const
function SummandsAddGetConst(handle, index) &
      bind(C, name='SummandsAddGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function SummandsAddGetConst

!! Get, by index \in [0,size)
function SummandsAddGet(handle, index) &
      bind(C, name='SummandsAddGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function SummandsAddGet

!! Set, by index \in [0,size)
subroutine SummandsAddSet(handle, index, fieldHandle) &
      bind(C, name='SummandsAddSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SummandsAddSet

!! ------------------------
!! Re: metadatum href
!! ------------------------

!! Has, by href
function SummandsAddHasByHref(handle, meta, metaSize) &
      bind(C, name='SummandsAddHasByHref') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function SummandsAddHasByHref

!! Get, by href, const
function SummandsAddGetByHrefConst(handle, meta, metaSize) &
      bind(C, name='SummandsAddGetByHrefConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function SummandsAddGetByHrefConst

!! Get, by href
function SummandsAddGetByHref(handle, meta, metaSize) &
      bind(C, name='SummandsAddGetByHref') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function SummandsAddGetByHref

!! Set, by href
subroutine SummandsAddSetByHref(handle, meta, metaSize, fieldHandle) &
      bind(C, name='SummandsAddSetByHref')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SummandsAddSetByHref


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalSummands
